<resources>
    <string name="app_name">Flat</string>
    <string name="toast_in_development">Not Supported Yet</string>
    <string name="commit">Commit</string>
    <string name="username">Username</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="agree">Agree</string>
    <string name="refuse">Refuse</string>
    <string name="end">End</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="enter">Enter</string>
    <string name="update">Update</string>
    <string name="retry">Retry</string>
    <string name="done">Done</string>
    <string name="preview">Preview</string>
    <string name="rename">Rename</string>
    <string name="send">Send</string>
    <string name="next">Next</string>
    <string name="account">Account</string>
    <string name="preferences">Preferences</string>
    <string name="privacy">Privacy</string>
    <string name="more">More</string>
    <string name="setting_on">On</string>
    <string name="setting_off">Off</string>
    <string name="relative_time_mm">%d m</string>
    <string name="relative_time_hh">%d h</string>
    <string name="relative_time_dd">%d d</string>
    <string name="home_room_info_today_format">Today %s</string>
    <string name="home_room_info_yesterday_format">Yesterday %s</string>
    <string name="home_room_info_tomorrow_format">Tomorrow %s</string>
    <string name="title_home">Home</string>
    <string name="title_cloud_storage">Cloud</string>
    <string name="title_cloud_pick">Upload</string>
    <string name="title_cloud_preview">Preview</string>
    <string name="title_user_info">Personal</string>
    <string name="title_setting">Settings</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_room_detail">Room Detail</string>
    <string name="title_room_all">All Room</string>
    <string name="title_join_room">Join Room</string>
    <string name="title_feedback">Feedback</string>
    <string name="title_about_us">About Us</string>
    <string name="title_language">Language</string>
    <string name="title_dark_mode">Dark Mode</string>
    <string name="title_activity_compose_test">ComposeTest</string>
    <string name="title_call_test" translatable="false">CallTest</string>
    <string name="title_country_or_area">Country/Area</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="term_of_service">Term of Service</string>
    <string name="icp_registration_record">ICP编号: 沪ICP备14053584号-25A</string>
    <string name="info_gathering">Information Gathering</string>
    <string name="info_third_party">Third-party Information</string>
    <string name="network_acceleration">Network Acceleration</string>
    <string name="account_security">Account Security</string>
    <string name="delete_account">Delete Account</string>
    <string name="stream_data_analysis">Data Analysis</string>
    <string name="room_type_big_class">Big Class</string>
    <string name="room_type_small_class">Small Class</string>
    <string name="room_type_one_to_one">One to One</string>
    <string name="room_type_desc_big_class">large number of students</string>
    <string name="room_type_desc_small_class">Up to 16 students</string>
    <string name="room_type_desc_one_to_one">For 1 student</string>
    <string name="create_room">Create Room</string>
    <string name="room_theme">Theme</string>
    <string name="create_room_type">Type</string>
    <string name="create_room_input_theme">Please enter the room theme.</string>
    <string name="class_room_no_operate_permission">No permission</string>
    <string name="schedule_room">Subscribe Room</string>
    <string name="quick_start_room">Quick Start</string>
    <string name="room_theme_empty_toast">room theme should not be empty</string>
    <string name="join_room">Join Room</string>
    <string name="enter_room">Enter Room</string>
    <string name="join_room_toast_empty">room uuid should not be empty</string>
    <string name="room_id">Room ID</string>
    <string name="input_room_id_hint">Please enter the room number</string>
    <string name="room_type">Room Type</string>
    <string name="nickname">Nickname</string>
    <string name="input_nickname_hint">Please enter nickname</string>
    <string name="join">Join In</string>
    <string name="join_option">Join Option</string>
    <string name="turn_on_camera">Turn on camera</string>
    <string name="turn_on_mic">Turn on microphone</string>
    <string name="join_room_default_time_format">Room created by %1$s</string>
    <string name="join_room_record_pmi_title">%1$s\'s personal room</string>
    <string name="room_not_stared">Room not started</string>
    <string name="home_room_list">Room</string>
    <string name="home_room_history">History</string>
    <string name="home_room_state_idle">Upcoming</string>
    <string name="home_room_state_started">Running</string>
    <string name="home_room_state_paused">Paused</string>
    <string name="home_room_state_end">Ended</string>
    <string name="home_no_room_tip">No rooms available</string>
    <string name="home_no_history_room_tip">No records</string>
    <string name="home_room_start_at_min">In %1$d minutes</string>
    <string name="setting_check_update">Check for updates</string>
    <string name="intent_no_browser">Link error or no browser</string>
    <string name="intent_browser_choose_title">Choose Browser</string>
    <string name="login_set_auth_uuid_error">Set auth uuid error</string>
    <string name="login_page_label_1">Interact online to keep ideas in sync</string>
    <string name="login_page_label_2">Powered by Agora</string>
    <string name="login_success_and_jump">Successful login, jump…</string>
    <string name="login_fail">Login failed</string>
    <string name="login_agreement_message">Have read and agree Privacy Policy and Term of Service</string>
    <string name="login_agreement_unchecked_hint">Please agree to the terms of service first</string>
    <string name="login_agreement_dialog_title">Service Agreement and Privacy Protection</string>
    <string name="login_agreement_dialog_message">In order to better ensure your legal rights and interests, please read and agree to the following agreement Flat Privacy Policy, Flat User Agreement</string>
    <string name="login_phone_input_placeholder">Phone number</string>
    <string name="login_phone_invalid_tip">Phone number is incorrect</string>
    <string name="login_email_invalid_tip">Email is incorrect</string>
    <string name="login_password_invalid_tip">Password at least 8 digits, including letters and numbers</string>
    <string name="login_code_input_placeholder">Verification code</string>
    <string name="login_code_invalid_tip">Verification code is incorrect</string>
    <string name="login_send_sms_code">Send Code</string>
    <string name="login_code_send">Code Send…</string>
    <string name="login_others_tip">Others</string>
    <string name="login_sign_in_or_up">Sign In / Sign Up</string>
    <string name="login_welcome">Welcome to Flat</string>
    <string name="login_welcome_slogan">Interact online to keep ideas in sync</string>
    <string name="login_already_bind_phone">Already Bound</string>
    <string name="login_phone_already_bound">Phone number is bound</string>
    <string name="login_verification_code_invalid">Invalid Verification Code</string>
    <string name="wechat">WeChat</string>
    <string name="github">Github</string>
    <string name="google">Google</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="login_sign_in">Sign In</string>
    <string name="login_sign_up">Sign Up</string>
    <string name="login_use_sms_login">Via SMS</string>
    <string name="login_use_password_login">Via Password</string>
    <string name="login_forgot_pwd">Forgot?</string>
    <string name="login_password_input_hint">Password</string>
    <string name="login_email_input_hint">Email</string>
    <string name="login_phone_or_email_input_hint">Phone or Email</string>
    <string name="bind">bind</string>
    <string name="unbind">unbind</string>
    <string name="bind_fail">bind fail</string>
    <string name="bind_success">bind success</string>
    <string name="user_avatar">User Avatar</string>
    <string name="bind_info">Bindings</string>
    <string name="bind_phone">Bind Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="bind_email">Bind Email</string>
    <string name="not_bound">Not bound</string>
    <string name="check_unbind_title">Unbind</string>
    <string name="check_unbind_message">Unbinding your account will prevent you from continuing to log in with it</string>
    <string name="unbind_limit_message">Current login is unique and cannot be unbound</string>
    <string name="register">Register</string>
    <string name="register_success">Register Success</string>
    <string name="register_profile_title">Profile</string>
    <string name="register_profile_avatar_tip">Avatar (optional)</string>
    <string name="register_profile_username_tip">Nickname (optional)</string>
    <string name="reset_password">Reset Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="set_password">Set Password</string>
    <string name="old_password_input_hint">Old Password</string>
    <string name="new_password_input_hint">New Password</string>
    <string name="new_password_input_hint_again">New Password Again</string>
    <string name="password_rule_tips">Password must have at least 8 characters, letters and numbers.</string>
    <string name="merge_account">Merge Account</string>
    <string name="merge_account_message">Phone number is bound to another account. Do you want to merge? The merge operation will clear all the data of the newly created account</string>
    <string name="agreement_global_dialog_message">Thank you for trusting and using Flat.\n\nWe rely on the Flat User Agreement and Flat Privacy Policy to help you understand how we collect,use,and store your personal information and what rights you have with respect to it.\n\nWhen you use Flat, we collect information about your device, logs and browsing history, and to ensure a positive experience in class, you may grant Flat access to your device\'s camera, microphone, and other information.\n\nYou can read the full Flat User Agreement and Flat Privacy Policy for more information.</string>
    <string name="say_something">Say something…</string>
    <string name="room_class_message_empty_hit">Say something…</string>
    <string name="stop_record">Stop recording</string>
    <string name="settings">Settings</string>
    <string name="camera">Camera</string>
    <string name="microphone">Microphone</string>
    <string name="exit_room">Exit</string>
    <string name="start_record">Start Record</string>
    <string name="chat">Chat</string>
    <string name="class_settings">Class settings</string>
    <string name="interaction_mode">Interaction</string>
    <string name="lecture_mode">Lecture</string>
    <string name="video_area">Video area</string>
    <string name="time_start">Start Time</string>
    <string name="copy_link_to_invite">Copy Invite</string>
    <string name="invite">Invite</string>
    <string name="exit_room_i_known_format">I know(%1$d)</string>
    <string name="exit_room_stopped_message">The room ends, exiting…</string>
    <string name="exit_room_title">Exit Room</string>
    <string name="teacher_request_camera">teacher request camera</string>
</resources>