<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            style="@style/RoomDialogTextTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/invite" />

        <ImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:src="@drawable/ic_dialog_close" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:textColor="@color/flat_day_night_text_primary"
            android:textSize="14sp"
            tools:text="@string/teacher_request_camera" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/leftButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_border_round_4_bg"
            android:gravity="center"
            android:text="@string/refuse"
            android:textColor="@color/flat_day_night_text_primary" />

        <View
            android:layout_width="16dp"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/rightButton"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_border_round_4_bg"
            android:gravity="center"
            android:text="@string/agree"
            android:textColor="@color/flat_day_night_text_primary" />
    </LinearLayout>
</LinearLayout>