<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_gray_border_round_4_bg"
    android:orientation="vertical"
    android:padding="8dp"
    tools:layout_width="170dp">

    <TextView
        style="@style/RoomTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/RoomTextCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/camera" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/flat_day_night_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/RoomTextCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/microphone" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchStyle" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/flat_day_night_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            style="@style/RoomTextCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_area" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchVideoArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/SwitchStyle" />
    </LinearLayout>

    <TextView
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/shape_red_border_round_4_bg"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingHorizontal="14dp"
        android:text="@string/exit_room"
        android:textColor="#f45454"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_toolbox_exit" />
</LinearLayout>
