<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:minWidth="280dp"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingTop="16dp"
    android:paddingBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit_room_title"
            android:textColor="@color/flat_black"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/exit_room_stopped_message"
            android:textColor="#7A7B7C"
            android:textSize="14sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/centerButton"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/shape_gray_border_round_4_bg"
            android:gravity="center"
            android:text="@string/exit_room_i_known_format"
            android:textColor="#444E60" />
    </LinearLayout>
</LinearLayout>