<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/invite_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/flat_black"
        android:textSize="16sp"
        tools:text="XXX 邀请您参加 Flat 房间" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/room_type"
            android:textColor="#7A7B7C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/room_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textColor="#444E60"
            android:textSize="14sp"
            tools:text="会议名称" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/room_id"
            android:textColor="#7A7B7C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/room_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textColor="#444E60"
            android:textSize="14sp"
            tools:text="2146534612" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|start"
            android:text="@string/time_start"
            android:textColor="#7A7B7C"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/room_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:textColor="#444E60"
            android:textSize="14sp"
            tools:text="11/26 14:30~15:30" />
    </FrameLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/copy"
        android:layout_width="232dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_blue_solid_round_4_bg"
        android:text="@string/copy_link_to_invite"
        android:textColor="#FFFFFF" />
</LinearLayout>