<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_gray_border_round_4_bg"
    android:orientation="vertical"
    android:padding="8dp"
    tools:minWidth="170dp">

    <TextView
        android:id="@+id/title"
        style="@style/RoomTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class_settings"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/record_displaying_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/red_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_red_dot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="REC"
            android:textColor="#fff45454"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/record_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="4dp"
            android:text="00:00"
            android:textColor="#ff444e60"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/modeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <TextView
            android:id="@+id/classModeInteraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_item_check_selector"
            android:drawablePadding="6dp"
            android:gravity="center_vertical"
            android:paddingVertical="2dp"
            android:paddingEnd="8dp"
            android:text="@string/interaction_mode"
            android:textColor="#ff7a7b7c"
            android:textSize="14sp" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:tag="SPACER" />

        <TextView
            android:id="@+id/classModeLecture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_item_check_selector"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingVertical="4dp"
            android:paddingEnd="8dp"
            android:text="@string/lecture_mode"
            android:textColor="#ff7a7b7c"
            android:textSize="14sp" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modeLayout">

        <TextView
            android:id="@+id/start_record"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/shape_gray_border_round_4_bg"
            android:drawableStart="@drawable/ic_record_stop"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/start_record"
            android:textColor="#444E60"
            android:textSize="14sp"
            android:visibility="gone"
            tools:visibility="gone" />

        <TextView
            android:id="@+id/stop_record"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/shape_red_border_round_4_bg"
            android:drawableStart="@drawable/ic_record_stop"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/stop_record"
            android:textColor="#F45454"
            android:textSize="14sp"
            tools:visibility="visible" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
