<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_gray_border_round_4_bg"
    android:orientation="vertical"
    android:visibility="visible">

    <TextView
        style="@style/RoomTextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:paddingVertical="10dp"
        android:text="@string/chat" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="4dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:drawingCacheQuality="high"
                android:indeterminateDrawable="@drawable/ic_loading_rotate"
                android:indeterminateDuration="2000"
                android:visibility="visible" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/messageList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_room_message" />

        <FrameLayout
            android:id="@+id/list_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/room_class_message_empty_hit"
                android:textColor="#7A7B7C"
                android:textSize="14sp" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_gray_border_round_4_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/messageEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginVertical="8dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center|start"
                android:hint="@string/say_something"
                android:maxHeight="100dp"
                android:textColor="@color/flat_black"
                android:textSize="14sp"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="4dp"
                android:src="@drawable/ic_message_send" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>